--- a/api/package.json
+++ b/api/package.json
@@ -5,5 +5,16 @@
     "express": "^4.17.3",
     "mongoose": "^6.2.9",
     "multer": "^1.4.4"
-  }
+  },
+  "name": "api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
