--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.9",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "path": "^0.12.7"
   },
   "name": "api",
   "version": "1.0.0",
