--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.4",
     "sass": "^1.49.11",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4",
